--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body
 	margin: 0;
 	padding: 0;
 	color: #2c3e50;
+    width: 100%;
 	}
 
 
@@ -76,7 +77,7 @@ a:hover
 
 .first_column
 	{
-	margin-left: -2%;
+	margin-left: 6%;
 	text-align: center;
 	float: left;
 	}
@@ -97,14 +98,6 @@ a:hover
 	margin-left: 6%;
 	}
 
-.fourth_column
-	{
-	
-	text-align: center;
-	float: left;
-	margin-left: 6%;
-	}
-
 #page1
 	{
 	padding-top: 15%;
@@ -116,6 +109,7 @@ a:hover
 	{
 	font-size: 1.5em;
 	width: 100%;
+    padding-left: 5%;
 	}
 
 #this_is_me
@@ -144,6 +138,16 @@ a:hover
 	width: auto;
 	margin-right: 0;
 	}
+	
+#cbros
+	{
+	text-decoration: underline;
+	}
+	
+#cbros:hover
+	{
+	color: #2ecc71;
+	}
 
 #page2
 	{
@@ -162,6 +166,11 @@ a:hover
 	{
 	margin-top: 13%;
 	}
+
+#lampheyhall
+{
+ margin-left: -23%;   
+}
 
 #page3
 	{
@@ -185,6 +194,16 @@ a:hover
 	font-size: 1.5em;
 	padding:1%;
 	}
+
+#torquingweb
+    {
+    text-decoration: underline;
+    }
+
+#torquingweb:hover
+    {
+    color: #2ecc71;   
+    }
 
 #page4
 	{
@@ -216,7 +235,6 @@ a:hover
 	width: 50%;
 	height: 80%;
 	}
-
 
 #beach
 	{
@@ -250,7 +268,7 @@ a:hover
 
 #page5
 	{
-	padding-top: 15%;
+	padding-top: 18%;
 	height: 500px;
 	}
 
@@ -259,12 +277,22 @@ a:hover
 	text-align: center;
 	}
 
+address
+    {
+   
+    }
+
+#contact
+    {
+    margin-left: 20%;
+    }
+
 #facebook
 	{
 	float: left;
 	margin-left: 4%;
 	margin-top: 2%;	
-	width: 6%;
+	width: 8%;
 	}
 
 #fb
@@ -273,13 +301,23 @@ a:hover
 	height: auto;
 	}
 
+#facebook:hover
+{
+    width: 9%;
+}
+
 #twitter
 	{
 	float: left;
 	margin-left: 4%;
 	margin-top: 2%;	
-	width: 6.5%;
+	width:9%;
 	}
+
+#twitter:hover
+    {
+    width: 10%;
+    }
 
 #twtr
 	{
@@ -292,8 +330,13 @@ a:hover
 	float: left;
 	margin-left: 4%;
 	margin-top: 2%;	
-	width: 6%;
+	width: 8%;
 	}
+
+#linkedin:hover
+    {
+    width: 9%;
+    }
 
 #linkedlogo
 	{
@@ -306,7 +349,7 @@ a:hover
 	float: left;
 	margin-left: 4%;
 	margin-top: 2%;	
-	width: 6%;
+	width: 8%;
 	}
 
 #skypelogo
@@ -320,8 +363,13 @@ a:hover
 	float: left;
 	margin-left: 4%;
 	margin-top: 2%;	
-	width: 6%;
+	width: 8%;
 	}
+
+#wordpress:hover
+    {
+    width: 9%;
+    }
 
 #wordlogo
 	{
@@ -334,20 +382,16 @@ a:hover
 	float: left;
 	margin-left: 4%;
 	margin-top: 2%;	
-	width: 5%;
+	width: 7%;
 	height: auto;
 	}
+
+#gmail:hover
+    {
+    width: 8%;
+    }
 
 #email
 	{
 	width: 100%;
 	}
-
-
-
-
-
-
-
-
-
