--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,6 @@ body
     width: 100%;
 	}
 
-
 header
 	{
 	position: fixed;
@@ -35,7 +34,11 @@ h2
 h3	{
 	color: #2ecc71;
 	font-size: 1.5em;
-	
+	}
+
+#blue
+	{
+	color: #2c3e50;
 	}
 
 nav
@@ -45,10 +48,10 @@ nav
 	width: 100%;
 	height: 8%;
 	top: 16%;
-	text-align: center;	
+	text-align: center;
 	}
 
-nav li	
+nav li
 	{
 	display: inline;
 	margin-bottom: 2.3em;
@@ -82,26 +85,11 @@ a:hover
 	float: left;
 	}
 
-.second_column
-	{
-	
-	text-align: center;
-	float: left;
-	margin-left: 2%;
-	}
-
-.third_column
-	{
-	
-	text-align: center;
-	float: left;
-	margin-left: 6%;
-	}
 
 #page1
 	{
-	padding-top: 15%;
-	height: 500px;
+	padding-top: 18%;
+	height: 80%;
 	}
 
 
@@ -109,27 +97,12 @@ a:hover
 	{
 	font-size: 1.5em;
 	width: 100%;
-    padding-left: 5%;
-	}
-
-#this_is_me
-	{
-	float:top;
-	margin-left: 54%;
-	position: relative;
-	font-size: 1.25em;
+  padding-left: 5%;
 	}
 
 #photo
 	{
 	float: right;
-	}
-
-#arrow
-	{
-	height:40%;
-	float: right;
-	margin-top: -1.5%;
 	}
 
 #my_photo
@@ -138,53 +111,26 @@ a:hover
 	width: auto;
 	margin-right: 0;
 	}
-	
-#cbros
-	{
-	text-decoration: underline;
-	}
-	
-#cbros:hover
-	{
-	color: #2ecc71;
-	}
 
-#page2
+#underline:hover
 	{
-	margin-left: 2%;
-	padding-top: 13%;
-	height: 500px;
+		text-decoration: underline;
+		color: #2ecc71;
 	}
-
-.qualifications
-	{
-	text-align: left;
-	margin-top: 25%;
-	}
-
-#uniquals
-	{
-	margin-top: 13%;
-	}
-
-#lampheyhall
-{
- margin-left: -23%;   
-}
 
 #page3
 	{
-	padding-top: 19%;
-	height: 500px;
+	padding-top: 25%;
 	text-align:center;
+	height: 100%;
+	padding-bottom: 5%;
 	}
 
 #portfolio_page
 	{
 	padding: 2%;
 	background-color:#2ecc71;
-	margin-left: 24%;
-	width:50%;
+	width:100%;
 	height: 50%;
 	}
 
@@ -195,81 +141,14 @@ a:hover
 	padding:1%;
 	}
 
-#torquingweb
-    {
-    text-decoration: underline;
-    }
-
-#torquingweb:hover
-    {
-    color: #2ecc71;   
-    }
-
 #page4
 	{
-	padding-top: 13%;
-	height: 500px;
-	}
-
-#octopush
-	{
-	float: left;
-	width: 40%;
-	height: 80%;
-	margin-left: 2%;
-	}
-
-#octopushlink
-	{
-	color: #2ecc71;
-	}
-
-#octopushlink: hover
-	{
-	text-decoration: underline;
-	}
-
-#photobox
-	{
-	float:right;
-	width: 50%;
-	height: 80%;
-	}
-
-#beach
-	{
-	height: 35%;
-	}
-
-#aber
-	{
-	height: 35%;
-	}
-
-#orchid
-	{
-	height: 35%;
-	}
-
-#castle
-	{
-	height: 35%;
-	}
-
-#sunset
-	{
-	height: 35%;
-	}
-
-#petal
-	{
-	height: 35%;
+	padding-top: 10%;
 	}
 
 #page5
 	{
-	padding-top: 18%;
-	height: 500px;
+		margin-bottom: 5%;
 	}
 
 #contact_page
@@ -277,121 +156,41 @@ a:hover
 	text-align: center;
 	}
 
+
 address
-    {
-   
-    }
-
-#contact
-    {
-    margin-left: 20%;
-    }
-
-#facebook
-	{
-	float: left;
-	margin-left: 4%;
-	margin-top: 2%;	
-	width: 8%;
-	}
-
-#fb
-	{
-	width: 100%;
-	height: auto;
-	}
-
-#facebook:hover
 {
-    width: 9%;
+	text-align: center;
 }
 
-#twitter
-	{
-	float: left;
-	margin-left: 4%;
-	margin-top: 2%;	
-	width:9%;
+.btn {
+	  background: #2c3e50;
+	  background-image: -webkit-linear-gradient(top, #2c3e50, #2c3e50);
+	  background-image: -moz-linear-gradient(top, #2c3e50, #2c3e50);
+	  background-image: -ms-linear-gradient(top, #2c3e50, #2c3e50);
+	  background-image: -o-linear-gradient(top, #2c3e50, #2c3e50);
+	  background-image: linear-gradient(to bottom, #2c3e50, #2c3e50);
+	  -webkit-border-radius: 28;
+	  -moz-border-radius: 28;
+	  border-radius: 28px;
+	  font-family: Arial;
+	  color: #ffffff;
+	  font-size: 20px;
+	  padding: 10px 20px 10px 20px;
+	  text-decoration: none;
 	}
 
-#twitter:hover
-    {
-    width: 10%;
-    }
-
-#twtr
-	{
-	width: 100%;
-	height: auto;
+.btn:hover {
+	  background: #2ecc71;;
+	  text-decoration: none;
 	}
 
-#linkedin
+footer
 	{
-	float: left;
-	margin-left: 4%;
-	margin-top: 2%;	
-	width: 8%;
+		text-align: center;
 	}
 
-#linkedin:hover
-    {
-    width: 9%;
-    }
-
-#linkedlogo
+#top
 	{
-	width: 100%;
-	height: auto;
-	}
-
-#skype
-	{
-	float: left;
-	margin-left: 4%;
-	margin-top: 2%;	
-	width: 8%;
-	}
-
-#skypelogo
-	{
-	width: 100%;
-	height: auto;
-	}
-
-#wordpress
-	{
-	float: left;
-	margin-left: 4%;
-	margin-top: 2%;	
-	width: 8%;
-	}
-
-#wordpress:hover
-    {
-    width: 9%;
-    }
-
-#wordlogo
-	{
-	width: 100%;
-	height: auto;
-	}
-
-#gmail
-	{
-	float: left;
-	margin-left: 4%;
-	margin-top: 2%;	
-	width: 7%;
-	height: auto;
-	}
-
-#gmail:hover
-    {
-    width: 8%;
-    }
-
-#email
-	{
-	width: 100%;
+		float: right;
+		margin-right: 2%;
 	}
